#RI-2393 - try to fix items overlaping

--- a/redisinsight/ui/src/components/monitor/Monitor/styles.module.scss
+++ b/redisinsight/ui/src/components/monitor/Monitor/styles.module.scss
@@ -30,6 +30,9 @@
 
 .listWrapper {
   @include euiScrollBar;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
+  font-variant-numeric: tabular-nums;
 
   width: 100%;
   height: 100%;
@@ -68,7 +71,6 @@
   align-items: center;
   max-width: 264px;
   flex-direction: column;
-  align-items: center;
 
   font: normal normal normal 12px/18px Graphik, sans-serif;
 }
@@ -135,8 +137,7 @@
 }
 
 .itemArgs {
-  word-break: break-word;
-  padding-right: 10px;
+  word-break: break-all;
 }
 
 .itemArgs__compressed {
@@ -146,9 +147,10 @@
 
 .item {
   display: block;
+  overflow: hidden !important;
 
-  & > span {
-    padding-right: 5px;
+  & > span:not(:last-of-type) {
+    padding-right: 8.7px;
   }
 }
 
